# libfprint-goodix-55a2

./: .gitignore  INSTALL_55a2.md  README  README.md
libfprint/drivers/goodixtls/: goodix55x4.c
libfprint/sigfm/: meson.build
